<resources>
    <string name="app_name">Campus Navigator</string>

    <string name="Beaconsuchescreen">Beacon suchen</string>
    <string name="Kartenscreen">Karte</string>
    <string name="Versanstaltungsscreen">Veranstaltungen</string>
    <string name="WiePscreen">Was ist eine Palme?</string>
    <string name="Beaconinfoscreen">Palme</string>
    <string name="WieBscreen">Was ist ein Beacon?</string>
    <string name="Einstellungsscreen">Einstellungen</string>
    <string name="Veranstaltungsdetailsscreen">Veranstaltungsdetails</string>
    <string name="Buildingsscreen">Gebäude</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="firstscreen_button">Start</string>

    <string name="homescreen_button">Scan</string>
    <string name="homescreen_kein_Beacon">Es wurde kein Beacon gefunden</string>

    <string name="kartescreen_GPS_deaktiviert">GPS ist deaktiviert.\nMöchten Sie GPS aktivieren?</string>
    <string name="kartescreen_GPS_aktivieren_ja">GPS aktivieren</string>
    <string name="kartescreen_GPS_aktivieren_nein">Abbrechen</string>
    <string name="kartescreen_campus">Campus</string>

    <string name="startscreen_appname">App-Name</string>

    <string name="einkaufswagenscreen_download_button">Download \"Wir sind im Garten\"-App</string>
    <string name="einkaufswagenscreen_info">Informationen zu den Palmen</string>

    <string name="palmescreen_update">Update</string>

    <string name="event_details_date">Datum und Uhrzeit:</string>
    <string name="event_details_date_navigate">navigieren</string>
    <string name="event_details_location">Veranstaltungsort:</string>
    <string name="event_details_description">Weitere Informationen:</string>
    <string name="title_activity_start">StartActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_first">FirstActivity</string>

    <string name="institut_prompt">Institution</string>
    <string name="connect">connect</string>

    <string name="backgroundsearch">Hintergrundsuche</string>

    <string-array name="intitut_array">
        <item>Hochschule</item>
        <item>Universität</item>
        <item>Studieninteressierte</item>
    </string-array>

    <string-array name="courseliste_hochschule_array">
        <item>Medieninformatik</item>
        <item>Technische - Informatik</item>
    </string-array>

    <string-array name="courseliste_uni_array">
        <item>Jura</item>
        <item>Psychologie</item>
    </string-array>

    <string-array name="courseliste_studieninteressierte_array">
        <item>--</item>
    </string-array>

    <string name="wieb">Was ist ein Beacon?\n\nBeacons sind kleine Bluetooth-Low-Energy-Sender, die beispielsweise an Türen, Produkten, Läden oder Points of Interest angebracht werden können. Die kleinen Sender können mit Smartphones kommunizieren und ermöglichen so eine automatisierte Kommunikation mit einzelnen Geräten. Man kann sich einen Beacon (übersetzt "Leuchtfeuer") als kleinen Lautsprecher vorstellen, welcher dauerhaft seine Anwesenheit und seinen Namen publiziert. Empfängt man ein Signal eines Beacons, so erfährt man auch wie stark der Empfang ist - je näher am Beacon desto besser der Empfang. Dies ermöglicht bei mehreren Beacons eine genaue Positionsbestimmung.\n\n\nWas können Beacons?\n\nEmpfangen: Insbesondere in geschlossenen Räumen war eine genaue Ortung von Menschen und Geräten bislang schwierig, Beacons ermöglichen dies nun. So wird es zum Beispiel auch möglich, Menschen intelligent durch große Gebäude, wie die der Hochschule, zu lotsen.\nSenden: Nähert sich ein Smartphone einem Sender, kann dieser gezielt Informationen an das Smartphone senden. So können Angebote, Aktionen oder weiterführende Informationen wie der Feuchtigkeitswert, der Luftdruck oder auch die Temperatur direkt an das Smartphone gesendet werden.\n\nZusammenfassend lässt sich sagen, dass Beacons den Einsatz von NFC, Indoor-GPS und QR-Codes ersetzen können und auch in Gebäuden funktionieren, in denen es keinen Mobilfunkempfang gibt.</string>

    <string name="wiep">Palmen sind mit Beacons ausgestattete Planzen. Die Beacons messen die Feuchtigkeit der Erde und senden diese Werte an in der Nähe befindliche Smartphones. Dadurch können Vorbeigehende sehen, ob die Planzen gegossen werden müssen oder nicht.</string>
</resources>
