<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/einkaufswagenscreen_scrollView"
    tools:context="com.hs_osnabrueck.swe_app.myapplication.EinkaufswagenFragment"
    android:background="@color/weiß">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/einkaufswagenscreen_beschreibung"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5sp"
            android:textColor="@color/schwarz"
            android:text="@string/einkaufswagenscreen_info" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/einkaufswagenscreen_download_button"
            android:layout_below="@+id/einkaufswagenscreen_beschreibung"
            android:layout_centerHorizontal="true"
            android:text="@string/einkaufswagenscreen_download_button"
            android:background="@color/normal"
            android:textColor="@color/weiß"
            android:paddingLeft="5sp"
            android:paddingRight="5sp" />

        <View
            android:id="@+id/einkaufswagenscreen_divider"
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:background="@color/normal"
            android:layout_below="@+id/einkaufswagenscreen_download_button"
            android:layout_marginTop="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/einkaufswagenscreen_beaconinfo"
            android:layout_below="@+id/einkaufswagenscreen_divider"
            android:padding="5sp"
            android:background="@drawable/cell_shape_beaconinfo"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:textColor="@color/schwarz" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homescreen_button"
            android:id="@+id/einkaufswagenscreen_scan_button"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/einkaufswagenscreen_beaconinfo"
            android:background="@color/normal"
            android:textColor="@color/weiß" />

    </RelativeLayout>
</ScrollView>